review with lint:all (#641)