@@ -20,6 +20,8 @@ package net.openhft.chronicle.core;
 
 import java.util.ServiceLoader;
 
+import static net.openhft.chronicle.core.internal.Bootstrap.uncheckedCast;
+
 /**
  * Handles application code which must be loaded first/run and may override system properties.
  * <p>
@@ -50,8 +52,8 @@ public final class ChronicleInit {
         String initRunnableClass = System.getProperty(CHRONICLE_INIT_CLASS);
         if (initRunnableClass != null && !initRunnableClass.isEmpty()) {
             try {
-                Class<? extends Runnable> descendant = (Class<? extends Runnable>) Class.forName(initRunnableClass);
-                Runnable chronicleInit = descendant.newInstance();
+                Class<? extends Runnable> descendant = uncheckedCast(Class.forName(initRunnableClass));
+                Runnable chronicleInit = descendant.getConstructor().newInstance();
                 chronicleInit.run();
             } catch (Exception ex) {
                 // System.err since the logging subsystem may not be up at this point
@@ -89,8 +91,8 @@ public final class ChronicleInit {
         String initRunnableClass = System.getProperty(CHRONICLE_POSTINIT_CLASS);
         if (initRunnableClass != null && !initRunnableClass.isEmpty()) {
             try {
-                Class<? extends Runnable> descendant = (Class<? extends Runnable>) Class.forName(initRunnableClass);
-                Runnable chronicleInit = descendant.newInstance();
+                Class<? extends Runnable> descendant = uncheckedCast(Class.forName(initRunnableClass));
+                Runnable chronicleInit = descendant.getConstructor().newInstance();
                 chronicleInit.run();
             } catch (Exception ex) {
                 // System.err since the logging subsystem may not be up at this point
